--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,12 +9,16 @@
 hmtl, body{
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: black ;
+
 }
 main{
+    background: url('../imagens/fundo-madeira.jpg');
     position: relative;
     height: 100vh;
-    background-color: green;
+    background-size: cover;
+    background-attachment: fixed;
+ 
 }
 
 section#telefone {
@@ -23,7 +27,34 @@ section#telefone {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    height: 500px;
-    width: 500px;
-    background-color: blue;
+    height: 627px;
+    width: 311px;
+    background: url('../imagens/frame-iphone.png') no-repeat ;  
+   
+}
+
+iframe#tela{
+    position: relative;
+    top:79px;
+    left:21px;
+
+    width: 267px;
+    height: 471px;
+}
+#redes-sociais{
+    text-align: right;
+}
+#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 100%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.483);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
+
+    transition: transform .05s, border .1s;
 }
