--- a/sociais/social-estilo.css
+++ b/sociais/social-estilo.css
@@ -5,6 +5,7 @@
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse:collapse;
+    background-color: darkred;
 }
 
 ::-webkit-scrollbar{
